[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Character/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/Character/Enemy/EnemyShip.gd" type="Script" id=2]
[ext_resource path="res://Source/Character/Enemy/topdown-enemy.svg" type="Texture" id=3]
[ext_resource path="res://Source/Character/Laser/Laser2.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CircleShape2D" id=2]
radius = 600.0

[node name="EnemyShip" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 1
script = ExtResource( 2 )

[node name="Line2D" parent="Laser" index="0"]
default_color = Color( 6, 0.5, 0.5, 1 )

[node name="CastParticles2D" parent="Laser" index="1"]
texture = ExtResource( 4 )

[node name="CollisionParticles2D" parent="Laser" index="2"]
texture = ExtResource( 4 )

[node name="BeamParticles2D" parent="Laser" index="3"]
texture = ExtResource( 4 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 3 )

[node name="PlayerEnter" type="Area2D" parent="." index="3"]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnter" index="0"]
shape = SubResource( 1 )

[node name="PlayerExit" type="Area2D" parent="." index="4"]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerExit" index="0"]
shape = SubResource( 2 )
[connection signal="hit" from="Laser" to="." method="_on_Laser_hit"]
[connection signal="body_entered" from="PlayerEnter" to="." method="_on_PlayerEnter_body_entered"]
[connection signal="body_exited" from="PlayerExit" to="." method="_on_PlayerExit_body_exited"]

[editable path="Laser"]
